# gfx-sandbox

./: README.md
GLWinFF/: GLWinFF.sln
GLWinFF/GLWinFF/: GLWinFF.cpp  GLWinFF.rc  GLWinFF.vcxproj  GLWinFF.vcxproj.filters  resource.h
Rasterizer/: Rasterizer.sln
Rasterizer/Rasterizer/: MainForm.Designer.cs  MainForm.cs  Program.cs  Rasterizer.csproj
Rasterizer/Rasterizer/Properties/: Resources.Designer.cs  Settings.Designer.cs
metal-triangle/: Shaders.metal
metal-triangle/metal-triangle/: AppDelegate.swift  ViewController.swift
metal-triangle/metal-triangle.xcodeproj/: project.pbxproj
metal-triangle/metal-triangle.xcodeproj/project.xcworkspace/xcuserdata/josh.xcuserdatad/: UserInterfaceState.xcuserstate
metal-triangle/metal-triangle.xcodeproj/xcuserdata/josh.xcuserdatad/xcschemes/: xcschememanagement.plist
metal-triangle/metal-triangle/Base.lproj/: Main.storyboard
metal-triangle/metal-triangleTests/: metal_triangleTests.swift
metal-triangle/metal-triangleUITests/: metal_triangleUITests.swift  metal_triangleUITestsLaunchTests.swift
threejs/: package-lock.json  package.json
threejs/src/: App.tsx
vulkan-triangle/: .gitignore  CMakeLists.txt  main.cpp
vulkan-triangle/shaders/: triangle.frag  triangle.vert
webgl-react/: package-lock.json  package.json
webgl-react/src/: App.tsx
webgpu-react/: package-lock.json  package.json  tsconfig.app.json
webgpu-react/src/: App.tsx
